[package]
name = "hammer-assets"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",
    "crates/cam-client",
    "crates/entity",
    "crates/migration",
    "crates/service",
    "crates/worker",
]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.21"
dotenvy = "0.15.7"
hmac = "0.12"
http = "1.0"
once_cell = "1.19"
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
reqwest-middleware = "0.2"
rust_decimal = "1.35"
sea-orm = { version = "1.1", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
  "macros",
  "with-time",
  "with-rust_decimal",
] }
sea-orm-migration = { version = "1.1", features = [
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
task-local-extensions = "0.1"
thiserror = "1.0"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3"
url = "2.5"

[dependencies]
